--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "design-systemm",
+  "name": "@oddomir/air-design-system",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,6 +17,7 @@
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@babel/cli": "^7.13.16",
     "@babel/core": "^7.14.0",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
@@ -34,8 +35,10 @@
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^1.0.3",
+    "auto": "^10.27.0",
     "babel-loader": "^8.2.2",
     "chromatic": "^5.8.0",
+    "cross-env": "^7.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
@@ -47,5 +50,25 @@
     "typescript": "~4.1.5",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "description": "Learn more in [Storybook tutorials](https://storybook.js.org/tutorials/).",
+  "main": "dist/index.js",
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/milosodalovic/design-system.git"
+  },
+  "keywords": [
+    "storybook",
+    "design",
+    "system"
+  ],
+  "author": "Milos Odalovic",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/milosodalovic/design-system/issues"
+  },
+  "homepage": "https://github.com/milosodalovic/design-system#readme"
 }
