--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@oddomir/air-design-system",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -9,7 +9,8 @@
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "release": "auto shipit --base-branch=master"
   },
   "dependencies": {
     "@vue/composition-api": "^1.0.0-rc.8",
