--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^1.0.3",
     "auto": "^10.27.0",
+    "autoprefixer": "^9.8.6",
     "babel-loader": "^8.2.2",
     "chromatic": "^5.8.0",
     "cross-env": "^7.0.3",
@@ -52,7 +53,9 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
+    "postcss": "^7.0.35",
     "sass-loader": "^8.0.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
     "typescript": "~4.1.5",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.11"
