--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "postcss": "^7.0.35",
+    "postcss-loader": "^4.2.0",
     "sass-loader": "^8.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
     "typescript": "~4.1.5",
